# Zephyrus

./: .gitignore  README.md  package-lock.json  package.json
.next/: BUILD_ID  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  trace
.next/server/chunks/: 387.js  894.js
.next/server/pages/: 404.html  404.js  500.html  _app.js  _document.js  _error.js  index.html  index.js
.next/static/Q6ElAeAP8ANSiM15WZUL0/: _buildManifest.js
.next/static/chunks/: 56-9876d81caeac8d053e6f.js  amp.js  main-5b4e65a6f6460903f8e8.js  webpack.js
codespaces/: package-lock.json  package.json  tailwind.config.js
codespaces/components/: Features.js  Footer.js  Header.js  Sponsors.js  aboutus.js
codespaces/pages/: index.js
codespaces/src/: index.js
components/: AboutUs.js  Features.js  Footer.js  Header.js  Sponsors.js
model/data/kaggle/: data.py
model/data_aggregation/: Cargo.toml  aqi_data.csv
model/data_aggregation/data/: northern_california_aqi.csv
model/data_aggregation/req/data/: aqi_data_long.csv  northern_california_aqi.csv  west_coast_aqi.csv
model/data_aggregation/src/: main.rs
model/src/: geospatialnn.ipynb
pages/: 404.js  index.js
pages/api/: hello.js
site/: .swcrc  index.html  package.json  tsconfig.node.json
site/my-react-app/: package.json
site/src/: App.css  App.tsx  Earth.tsx  ThreeDScene.tsx  index.css  styles.css
styles/: global.css
zephyrus 2.0/: index.html  package-lock.json
zephyrus 2.0/my-react-app/: package-lock.json
zephyrus 2.0/src/: App.tsx  ThreeDScene.tsx  index.css  styles.css
(+615 files in other folders)
